# httpx-pydantic-api

./: .drone.yml  README.md  pyproject.toml
apix/: client.py  core.py
tests/: test_core.py
