[tool.poetry]
name = "httpx-api"
version = "0.1.0"
description = ""
authors = ["Kevin C-Dubois <kevin@kcdubois.net>"]
readme = "README.md"
packages = [{include = "apix"}]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.3"
pydantic = "^1.10.6"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.0"
pytest = "^7.2.2"
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
